--- a/src/components/UI/Footer.module.scss
+++ b/src/components/UI/Footer.module.scss
@@ -3,5 +3,5 @@
   text-align: center;
   user-select: none;
   font-size: 0.75rem;
-  color: var(--color-gray-800);
+  color: var(--color-text-n);
 }
